<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView android:layout_width="match_parent"
              android:layout_marginTop="16dp"
              style="?android:listSeparatorTextViewStyle"
              android:layout_height="wrap_content"
              android:text="@string/crime_title_label"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/crime_title"
              android:hint="@string/crime_title_hint"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              style="?android:listSeparatorTextViewStyle"
              android:text="@string/crime_details_label"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/crime_date"/>

    <CheckBox android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/crime_solved"
              android:text="@string/crime_solved_label"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_weight="0"
                  android:orientation="horizontal">

        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/first_button"
                android:layout_weight="1"
                android:text="@string/first"/>

        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/last_button"
                android:text="@string/last"/>

    </LinearLayout>

</LinearLayout>